fixed spacing issues with list

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -114,6 +114,10 @@ textarea {
      color: black;
      padding: 0 4ex;
    }
+   ul {
+     width: 50%;
+     display: inline-block;
+   }
 .container {
   background-color: purple;
   margin-top: 3ex;
@@ -133,7 +137,9 @@ textarea {
 .tutorial {
   background-color: pink;
 }
-.month {
+aside.month {
+  width: 150px;
+  margin-top: 150px;
   float: right;
 }
 .month ul li a {
